# cryptography

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
curve25519/: ACKNOWLEDGEMENTS.md  CHANGELOG_dalek.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_dalek.md  build.rs
curve25519-cuda/: Cargo.toml
curve25519-cuda/benches/: msm.rs
curve25519-derive/: Cargo.toml  README.md
curve25519-derive/tests/: tests.rs
curve25519/benches/: dalek_benchmarks.rs
curve25519/curve25519/: Cargo.toml  README_dalek.md
curve25519/curve25519-cuda/: Cargo.toml
curve25519/curve25519-cuda/benches/: msm.rs
curve25519/curve25519-cuda/src/: lib.rs  tests.rs
curve25519/curve25519-derive/: Cargo.toml
curve25519/curve25519/docs/: parallel-formulas.md
curve25519/curve25519/src/: diagnostics.rs  montgomery.rs
curve25519/curve25519/src/backend/: vector.rs
curve25519/curve25519/src/backend/vector/scalar_mul/: precomputed_straus.rs
curve25519/solana-ed25519/: Cargo.toml  README.md  README_zebra.md
curve25519/solana-ed25519/benches/: bench.rs  dalek_benchmarks.rs
curve25519/solana-ed25519/src/: backend.rs  constants.rs  ed_sigs.rs  edwards.rs  field.rs  lib.rs  montgomery.rs  ristretto.rs  scalar.rs  short_weierstrass.rs  traits.rs  util.rs  window.rs
curve25519/solana-ed25519/src/backend/: vector.rs
curve25519/solana-ed25519/src/backend/serial/: curve_models.rs
curve25519/solana-ed25519/src/backend/serial/scalar_mul/: precomputed_straus.rs  straus.rs  vartime_triple_base.rs
curve25519/solana-ed25519/src/backend/serial/u64/: field.rs  scalar.rs
curve25519/solana-ed25519/src/backend/vector/: avx512.rs
curve25519/solana-ed25519/src/backend/vector/avx2/: constants.rs  field.rs
curve25519/solana-ed25519/src/backend/vector/avx512/: batch.rs  cache.rs  edwards.rs  hot_key_cache.rs  policy.rs  sha512.rs  wide.rs
curve25519/solana-ed25519/src/backend/vector/scalar_mul/: pippenger.rs  precomputed_straus.rs  straus.rs  variable_base.rs  vartime_double_base.rs  vartime_triple_base.rs
curve25519/solana-ed25519/src/ed_sigs/: avx512.rs  batch.rs  bip32.rs  legacy.rs  signing_key.rs  simd.rs  tests.rs  verification_key.rs
curve25519/solana-ed25519/src/ed_sigs/simd/: edwards.rs  policy.rs  unsupported.rs  verifier.rs  wide.rs
curve25519/solana-ed25519/src/ed_sigs/tests/: avx512.rs  batch.rs  bip32.rs  decoding.rs  encoding.rs  heea.rs  mod.rs  rfc8032.rs  simd.rs  small_order.rs  unit_tests.rs  util.rs
curve25519/solana-ed25519/src/ed_sigs/tests/util/: mod.rs
curve25519/solana-ed25519/src/lizard/: lizard_constants.rs  lizard_ristretto.rs
curve25519/solana-ed25519/src/scalar/: heea.rs
curve25519/src/: edwards.rs  field.rs  lib.rs  lizard.rs  macros.rs  montgomery.rs  ristretto.rs  scalar.rs  short_weierstrass.rs
curve25519/src/backend/: serial.rs
curve25519/src/backend/serial/scalar_mul/: vartime_triple_base.rs
curve25519/src/backend/vector/: packed_simd.rs
curve25519/src/backend/vector/avx2/: edwards.rs  field.rs
curve25519/src/backend/vector/scalar_mul/: pippenger.rs  straus.rs  variable_base.rs  vartime_triple_base.rs
curve25519/src/lizard/: u64_constants.rs
curve25519/src/scalar/: heea.rs
curve25519/tests/: build_tests.sh
ed25519-heea/: Cargo.toml
ed25519-heea/benches/: bench.rs
ed25519-heea/src/: signing_key.rs
experimental/ed25519-pokos/: Cargo.toml  readme.md
experimental/ed25519-pokos/src/: lib.rs  private_seed_chain.rs  prover.rs  verifier.rs
experimental/ed25519-pokos/src/sha512/: air.rs  circuit.rs  mod.rs  private_seed_chain.rs  trace.rs
experimental/ed25519-pokos/src/sha512/air/: columns.rs  constraints.rs  seed_chain.rs  trace_builder.rs
experimental/ed25519-pokos/src/sha512/proof_api/: mod.rs  segment_chain.rs
scripts/: bench-ed25519-backends.sh
secp256r1/: Cargo.toml  README.md
secp256r1/benches/: field.rs  group.rs  scalar.rs  sign.rs  verify.rs
secp256r1/src/: constants.rs  ecdsa.rs  error.rs  field.rs  group.rs  lib.rs  scalar.rs
secp256r1/tests/: ecdsa.rs
syscall/: README.md
syscall/bls12-381-syscall/: Cargo.toml
syscall/bls12-381-syscall/benches/: bench_main.rs
syscall/bls12-381-syscall/src/: encoding.rs  lib.rs  pairing.rs  subtraction.rs
syscall/bn254-syscall/: Cargo.toml
syscall/bn254-syscall/src/: addition.rs  lib.rs  multiplication.rs  pairing.rs
