[package]
name = "solana-curve25519-cuda"
version = "0.1.0"
edition = "2024"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[dependencies]
curve25519.workspace = true
rayon.workspace = true

[build-dependencies]
cc.workspace = true
which.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "msm"
harness = false
