[package]
name = "solana-curve25519-derive"
version = "0.1.0"
edition = "2021"

authors = ["Anza Cryptography Team"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Proc-macro helpers for solana-curve25519 (forked from curve25519-derive)"

[lib]
name = "curve25519_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = { version = "2.0.27", features = ["full"] }
