[package]
name = "solana-bls12-381-syscall"
description = "Solana BLS12-381 Syscall"
documentation = "https://docs.rs/solana-bls12-381-syscall"
version = "0.1.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/cryptography"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2024"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
blst = { workspace = true }
blstrs = { workspace = true }
bytemuck = { workspace = true, features = ["min_const_generics"] }
bytemuck_derive = { workspace = true }
group = { workspace = true }
pairing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hex-literal = { workspace = true }

[[bench]]
name = "bench_main"
harness = false
