[package]
name = "solana-bn254-syscall"
description = "Solana BN254 Syscall"
documentation = "https://docs.rs/solana-bn254-syscall"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = "2021"
include = ["src/**/*"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
